--- a/myblogsite/blog/templates/post_form.html
+++ b/myblogsite/blog/templates/post_form.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
 </head>
 <body>
+
     {% include 'header.html' %}
-    <h1>Post Here</h1>
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="" method="post" enctype="multipart/form-data" style = "margin: 0 50px;">
+        <h1>Post Here</h1>
         {% csrf_token %}
         
         {{ form.non_field_errors }}
