Filtered Profile Dashboard
deleted post will no longer display in dashboard

--- a/myblogsite/blog/templates/Profile/profile_test.html
+++ b/myblogsite/blog/templates/Profile/profile_test.html
@@ -6,7 +6,7 @@
             <div class="card mb-2">
                 <div class="card-body p-2 p-sm-3">
                     <div class="media forum-item">
-                        <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                        <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="/media/{{ favorite.user_post_ref.user_ref.picture }}" class="mr-3 rounded-circle" width="50" alt="{{ favorite.user_post_ref.user_ref.picture }}" /></a>
                         <div class="media-body align-self-center">
                             <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ favorite.user_post_ref.post_ref.title }}</a></h6>
                         </div>
