--- a/myblogsite/blog/templates/Profile/profile_dashboard.html
+++ b/myblogsite/blog/templates/Profile/profile_dashboard.html
@@ -10,7 +10,7 @@
                 <div class="media forum-item">
                     <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{ picture }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
                     <div class="media-body align-self-center">
-                        <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_post.title }}</a></h6>
+                        <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_post.post_ref.title }}</a></h6>
                     </div>
                     <div class="text-muted small text-center align-self-center">
                         <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i></span>
