--- a/myblogsite/blog/templates/Profile/profile_test.html
+++ b/myblogsite/blog/templates/Profile/profile_test.html
@@ -11,8 +11,8 @@
                             <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ favorite.user_post_ref.post_ref.title }}</a></h6>
                         </div>
                         <div class="text-muted small text-center align-self-center">
-                            <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
-                            <span><i class="far fa-comment ml-2"></i> 3</span>
+                            <span class="d-none d-sm-inline-block favorite-views" data-value="{{ favorite.user_post_ref.id }}"><i class="far fa-eye"></i></span>
+                            <span class="favorite-comments-num" data-value="{{ favorite.user_post_ref.id }}"><i class="far fa-comment ml-2"></i></span>
                         </div>
                     </div>
                 </div>
