--- a/myblogsite/blog/templates/Profile/profile_dashboard.html
+++ b/myblogsite/blog/templates/Profile/profile_dashboard.html
@@ -35,8 +35,8 @@
                         <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_comment.content }}</a></h6>
                     </div>
                     <div class="text-muted small text-center align-self-center">
-                        <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
-                        <span><i class="far fa-comment ml-2"></i> 3</span>
+                        <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i></span>
+                        <span><i class="far fa-comment ml-2"></i></span>
                     </div>
                 </div>
             </div>
