Ajax for number of views and comments in profile

--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -68,6 +68,6 @@
 <script>
     var csrf_token = '{% csrf_token %}'
 </script>
-<script src="{% static 'blog/js/home.js' %}"></script>
+<script type="module" src="{% static 'blog/js/home.js' %}"></script>
 </body>
 </html>
