--- a/myblogsite/blog/templates/Profile/profile_dashboard.html
+++ b/myblogsite/blog/templates/Profile/profile_dashboard.html
@@ -1,4 +1,3 @@
-
 <div class="row">
     <div class="col-lg">
         <h5>Posts</h5>
@@ -13,8 +12,8 @@
                         <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ user_post.post_ref.title }}</a></h6>
                     </div>
                     <div class="text-muted small text-center align-self-center">
-                        <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i></span>
-                        <span><i class="far fa-comment ml-2"></i></span>
+                        <span class="d-none d-sm-inline-block favorite-views" data-value="{{ user_post.id }}"><i class="far fa-eye"></i></span>
+                        <span class="favorite-comments-num" data-value="{{ user_post.id }}"><i class="far fa-comment ml-2"></i></span>
                     </div>
                 </div>
             </div>
