--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/profile.css' %}">
     <style>
         .profile-container {
@@ -72,6 +70,9 @@
                 </div>
             </div>
         </div>
+    <script>
+        var csrf_token = '{% csrf_token %}'
+    </script>
     <script type="module" src="{% static 'blog/js/profile.js' %}"></script>
 </body>
 </html>
