show delete improved

--- a/myblogsite/blog/templates/Profile/profile_deleted_posts.html
+++ b/myblogsite/blog/templates/Profile/profile_deleted_posts.html
@@ -10,14 +10,13 @@
     
 </head>
 <body>
-    {% include 'header.html' %}
     <div class="container mt-4">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <h5>Deleted Posts</h5>
                 <hr>
-                {% if posts %}
-                    {% for post in posts %}
+                {% if deleted_user_posts %}
+                    {% for post in deleted_user_posts %}
                         <div class="card mb-2">
                             <div class="card-body p-2 p-sm-3">
                                 <div class="media forum-item">
