--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -55,9 +55,9 @@
                     <div style="display: flex;">
                         <button id="showOverview" class="btn btn-dark" style="margin: 10px;">Overview</button>
                         <button id="showFavorites" class="btn btn-dark" style="margin: 10px;">Favorites</button>
-                        <form action="{% url 'profile_deleted_posts' user_id=request.user.id %}">
-                            <button type="submit" class="btn btn-dark" style="margin: 10px;">Deleted posts</button>
-                        </form>
+                        <button id="showDeleted" class="btn btn-dark" style="margin: 10px;">Deleted</button>
+                        
+                        
                     </div>
                 
                     <div id="OverviewDashboard" style="display: block;">
@@ -67,11 +67,31 @@
                     <div id="FavoritesDashboard" style="display: none;">
                         {% include 'Profile/profile_test.html' %}
                     </div>
+                    <div id="DeleteDashboard" style="display: none;">
+                        {% include 'Profile/profile_deleted_posts.html' %}
+                    </div>
                 </div>
             </div>
         </div>
     <script>
         var csrf_token = '{% csrf_token %}'
+        document.getElementById('showOverview').onclick = function() {
+            document.getElementById('OverviewDashboard').style.display = 'block';
+            document.getElementById('FavoritesDashboard').style.display = 'none';
+            document.getElementById('DeleteDashboard').style.display = 'none';
+        };
+
+    document.getElementById('showFavorites').onclick = function() {
+        document.getElementById('FavoritesDashboard').style.display = 'block';
+        document.getElementById('OverviewDashboard').style.display = 'none';
+        document.getElementById('DeleteDashboard').style.display = 'none';
+    };
+
+    document.getElementById('showDeleted').onclick = function() {
+        document.getElementById('DeleteDashboard').style.display = 'block';
+        document.getElementById('FavoritesDashboard').style.display = 'none';
+        document.getElementById('OverviewDashboard').style.display = 'none';
+    };
     </script>
     <script type="module" src="{% static 'blog/js/profile.js' %}"></script>
 </body>
