Transfer functions to js files

--- a/myblogsite/blog/templates/Profile/profile_deleted_posts.html
+++ b/myblogsite/blog/templates/Profile/profile_deleted_posts.html
@@ -1,57 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
-    
-</head>
-<body>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <h5>Deleted Posts</h5>
-                <hr>
-                {% if deleted_user_posts %}
-                    {% for post in deleted_user_posts %}
-                        <div class="card mb-2">
-                            <div class="card-body p-2 p-sm-3">
-                                <div class="media forum-item">
-                                    <a href="#" data-toggle="collapse" data-target=".forum-content">
-                                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" />
-                                    </a>
-                                    <div class="media-body align-self-center">
-                                        <h6>
-                                            <a href="#" class="text-body">{{ post.post_ref.title }}</a>
-                                        </h6>
-                                        
-                                    </div>
-                                    <div class="text-muted small text-center align-self-center" ">
-                                        <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
-                                        <span><i class="far fa-comment ml-2"></i> 3</span> 
-                                            <div style = "display: flex;">
-                                                <form action="{% url 'perma_delete' pk=post.pk %}" method="POST">
-                                                    {% csrf_token %}
-                                                    <button type="submit" class="btn btn-dark" style = "margin: 0 10px;">Delete post</button>
-                                                </form> 
-                                                <form action="{% url 'restore_post' pk=post.pk %}" method="POST">
-                                                    {% csrf_token %}
-                                                    <button type="submit" class="btn btn-dark">Restore</button>
-                                                </form>
-                                            </div>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <h5>Deleted Posts</h5>
+            <hr>
+            {% if deleted_user_posts %}
+                {% for post in deleted_user_posts %}
+                    <div class="card mb-2">
+                        <div class="card-body p-2 p-sm-3">
+                            <div class="media forum-item">
+                                <a href="#" data-toggle="collapse" data-target=".forum-content">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" />
+                                </a>
+                                <div class="media-body align-self-center">
+                                    <h6>
+                                        <a href="#" class="text-body">{{ post.post_ref.title }}</a>
+                                    </h6>
+
+                                </div>
+                                <div class="text-muted small text-center align-self-center">
+                                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
+                                    <span><i class="far fa-comment ml-2"></i> 3</span>
+                                    <div style = "display: flex;">
+                                        <form action="{% url 'perma_delete' pk=post.pk %}" method="POST">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-dark" style = "margin: 0 10px;">Delete post</button>
+                                        </form>
+                                        <form action="{% url 'restore_post' pk=post.pk %}" method="POST">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-dark">Restore</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
-                {% else %}
-                    <p>No deleted posts found.</p>
-                {% endif %}
-            </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>No deleted posts found.</p>
+            {% endif %}
         </div>
     </div>
-</body>
-</html>
+</div>
