View and comment count deleted posts

--- a/myblogsite/blog/templates/Profile/profile_deleted_posts.html
+++ b/myblogsite/blog/templates/Profile/profile_deleted_posts.html
@@ -18,8 +18,8 @@
 
                                 </div>
                                 <div class="text-muted small text-center align-self-center">
-                                    <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
-                                    <span><i class="far fa-comment ml-2"></i> 3</span>
+                                    <span class="d-none d-sm-inline-block favorite-views"><i class="far fa-eye"></i></span>
+                                    <span class="favorite-comments-num"><i class="far fa-comment ml-2"></i></span>
                                     <div style = "display: flex;">
                                         <form action="{% url 'perma_delete' pk=post.pk %}" method="POST">
                                             {% csrf_token %}
