yawa way klase appdev

--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -18,6 +18,9 @@
             <div class="d-flex align-items-center">
                 {% if user.is_authenticated %}
                     <img src="{{ user.picture.url }}" alt="Profile Picture" class="profile-img" style="height:30px;width:30px;border-radius:50%;">
+                    {% if user.is_staff %}
+
+                    {% endif %}
                     <a class="nav-link text-light ml-2" href="/profile/">Profile</a>
                     <a class="nav-link text-light ml-2" href="/login/">Logout</a>
                 {% else %}
