--- a/myblogsite/blog/templates/Admin/admin_panel.html
+++ b/myblogsite/blog/templates/Admin/admin_panel.html
@@ -29,15 +29,18 @@
     h2 {
         margin-bottom: 30px;
     }
+
+    .row{
+        margin: 60px;
+    }
     </style>
     
 </head>
 <body>
     {% include 'header.html' %}
     
-        {% include 'Profile/profile_count.html' %}
 
-        <div class="container-fluid">
+        <div class="container-fluid m-3">
             <div class="row d-flex">
                 <div class="left-column p-2 border border-primary" style="flex: 0 0 20%; max-width: 20%;">
                     <!-- 20% content here -->
@@ -45,31 +48,30 @@
                         <h2>Profile</h2>
                         <img src="{{ picture }}" alt="Profile Picture" class="profile-pic" style="height: 100px;">
                         
-                        <div class="profile-info">
-                            <h5>Username: <i>{{ username }}</i></h5>
-                            <h5>Is Staff: <i>{{ is_staff }}</i></h5>
-                            {% if is_staff == True %}
-                                <a href="{% url 'admin_panel' %}">Admin</a>
-                            {% endif %}
+                        <div>
+                            <div style="display: inline;">
+                                <button id="showUsers" class="btn btn-dark" style="margin: 10px;">Users</button>
+                                </br>
+                                <button id="showPosts" class="btn btn-dark" style="margin: 10px;">Posts</button>
+                                </br>
+                                <button id="showComments" class="btn btn-dark" style="margin: 10px;">Comments</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col p-2 border border-secondary">
-                    <div style="display: flex;">
-                        <button id="showOverview" class="btn btn-dark" style="margin: 10px;">Overview</button>
-                        <button id="showFavorites" class="btn btn-dark" style="margin: 10px;">Favorites</button>
-                        <button id="showDeleted" class="btn btn-dark" style="margin: 10px;">Deleted</button>
+                    
+                
+                    <div id="UsersDashboard" style="display: block;">
+                        {% include 'Admin/admin_dashboard.html' %}
                     </div>
                 
-                    <div id="OverviewDashboard" style="display: block;">
-                        {% include 'Profile/profile_dashboard.html' %}
+                    <div id="PostsDashboard" style="display: none;">
+                        
                     </div>
-                
-                    <div id="FavoritesDashboard" style="display: none;">
-                        {% include 'Profile/profile_test.html' %}
-                    </div>
-                    <div id="DeleteDashboard" style="display: none;">
-                        {% include 'Profile/profile_deleted_posts.html' %}
+                    
+                    <div id="CommentsDashboard" style="display: none;">
+                        
                     </div>
                 </div>
             </div>
