--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -41,6 +41,12 @@
                             <div class="d-flex">
                                 <p id="post_upvote" style="cursor:pointer; margin-right: 10px;">Upvote: {{ post_upvotes }}</p>
                                 <p id="post_downvote" style="cursor:pointer;">Downvote: {{ post_downvotes }}</p>
+                                {% if user.is_staff %}
+                                    <form method="POST" action="{% url 'ban_user' post.user_ref.id %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger">Ban user</button>
+                                    </form>
+                                {% endif %}
                             </div>
                     
                             <div class="d-flex align-items-center">
