Admin Panel Fix

--- a/myblogsite/blog/templates/Admin/admin.html
+++ b/myblogsite/blog/templates/Admin/admin.html
@@ -77,7 +77,7 @@
                     </div>
                     
                     <div id="CommentsDashboard" style="display: none;">
-                        {% include 'Admin/reported_Comments.html'%}
+                        {% include 'Admin/reported_comments.html'%}
                     </div>
                 </div>
             </div>
