--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -49,7 +49,7 @@
                             <h5>Username: <i>{{ username }}</i></h5>
                             <h5>Is Staff: <i>{{ is_staff }}</i></h5>
                             {% if is_staff == True %}
-                                <a href="{% url 'admin_panel' %}">Admin</a>
+                                <a href="{% url 'adminpanel' %}">Admin</a>
                             {% endif %}
                         </div>
                     </div>
