--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -22,7 +22,7 @@
                     <a class="nav-link text-light ml-2" href="/adminpanel/">Admin</a>
                     {% endif %}
                     <a class="nav-link text-light ml-2" href="/profile/">Profile</a>
-                    <a class="nav-link text-light ml-2" href="/login/">Logout</a>
+                    <a class="nav-link text-light ml-2" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                     <a class="nav-link text-light" href="/login/">Login</a>
                     <a class="nav-link text-light ml-2" href="/register/">Register</a>
