report post with admin response functionalities

--- a/myblogsite/blog/templates/Admin/admin_panel.html
+++ b/myblogsite/blog/templates/Admin/admin_panel.html
@@ -67,7 +67,7 @@
                     </div>
                 
                     <div id="PostsDashboard" style="display: none;">
-                        
+                        {% include 'Admin/reported_posts.html' %}
                     </div>
                     
                     <div id="CommentsDashboard" style="display: none;">
